packageDetails scroll overflow x fixed and scss cleaned up

--- a/src/styles/components/_packageDetails.scss
+++ b/src/styles/components/_packageDetails.scss
@@ -1,28 +1,32 @@
 @use "../abstracts" as a;
 
-.sub-header {
-  background: a.$cl-primary-500;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 8rem;
-  color: a.$cl-light;
-  padding: 0 2rem;
+.details-page {
+  height: 100%;
+
+  &__header {
+    background: a.$cl-primary-500;
+    @include a.flex(row, center, flex-start);
+    height: 8rem;
+    color: a.$cl-light;
+    padding: 0 2rem;
+    width: 100%;
+  }
+
+  &__main {
+    width: 90%;
+    margin: 2rem auto;
+
+    &--top {
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+        rgba(0, 0, 0, 0.22) 0px 10px 10px;
+      border-radius: 24px;
+    }
+  }
 }
 
 .detail {
-  width: 90%;
-  margin: 2rem auto;
-  height: 100%;
-  border-radius: 24px;
-  border: 1px solid black;
-  //   box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
-
   &__wrapper {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-start;
-    justify-content: space-between;
+    @include a.flex(row, flex-start, space-between);
     padding: 2rem;
 
     .item:nth-child(1) {
@@ -30,9 +34,7 @@
     }
 
     .icons {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
+      @include a.flex(row, center, center);
 
       .id {
         margin-right: 1rem;
@@ -42,12 +44,10 @@
 
   &__info {
     padding: 2rem;
+    margin: 2rem 0;
 
     .item {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: space-between;
+      @include a.flex(row, center, space-between);
       margin: 2rem 0;
     }
   }
